--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,12 @@ plugins {
     id 'java'
 }
 
-group = 'ru.netology'
-version = '1.0-SNAPSHOT'
+group 'ru.netology'
+version '1.0-SNAPSHOT'
+
+sourceCompatibility = 11
+compileJava.options.encoding = 'UTF-8'
+compileTestJava.options.encoding = 'UTF-8'
 
 repositories {
     mavenCentral()
@@ -14,6 +18,9 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.6.1'
 }
 
+test {
+    useJUnitPlatform()
+}
 test {
     useJUnitPlatform()
 }
